--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,17 +2,17 @@ version: 2
 
 jobs:
   build:
-    working_directory: /go/src/github.com/dip-dev/golorich
     dokcer:
       - image: circleci/golang:1.10
+    working_directory: /go/src/github.com/dip-dev/golorich
     steps:
       - checkout
-      - run
+      - run:
           name: install libraries
           command: |
-            go get github.com/hashicorp/logutils
+            go get -t -d -v
             go get -u github.com/golang/lint/golint
-      - run
+      - run:
           name: test
           command: |
             (! gofmt -s -d . | grep '^')
