--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 
 jobs:
   build:
-    dokcer:
+    docker:
       - image: circleci/golang:1.10
     working_directory: /go/src/github.com/dip-dev/golorich
     steps:
